# truvari

./: .coveragerc  .gitattributes  .gitignore  .gitmodules  .pylintrc  .readthedocs.yaml  CONTRIBUTING.md  DesignDoc_collap_refactor.txt  DesignDoc_matobj.txt  Dockerfile  LICENSE  Notes.txt  README.md  Singularity.def  TruvariStatsPlots.ipynb  UPDATES.txt  bakeoff.sh  benchmark_pipe.py  benchmark_pipe.sh  consistency_report.py  dist_cmds.sh  distance_check.py  do_binned.py  giab_report.py  giab_summary.py  make_tinydb.py  multi_venn.py  pylintrc  pyproject.toml  query_tinydb.py  setup.py  stratifications.sh  truvari.py  v0.5Notes.txt  vcf_sizebin.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  func_tests.yml  pylint.yml  release.yml
docs/: Collapse-on-Regions-with-a-High‐Density-of-SVs.md  Development.md  Home.md  Installation.md  MatchIds.md  Matching.txt  Stratp-Test.md  Updates.md  anno.md  bench.md  collapse.md  consistency.md  divide.md  freeze_wiki.sh  ga4gh.md  phab.md  refine.md  requirements.txt  segment.md
docs/api/: conf.py  (+8 more)
imgs/: README.md
repo_utils/: README.md  coverage_maker.py  grm_tester.py  info_puller.py  pylint_maker.py  run_doctests.py  run_unittest.py  setup_test.sh  truvari_ssshtests.sh
resources/: all_fields2truvbed.py  chm13.simpleRepeat.truvari.bed.gz.tbi  grch37.simpleRepeat.truvari.bed.gz.tbi  grch38.simpleRepeat.truvari.bed.gz.tbi
trust/: Cargo.toml  confirm.py
truvari/: Notes.txt  __init__.py  __main__.py  anno.py  annotation.py  bench.py  benchmark_pipe.py  bndbench.py  collapse.py  comparisons.py  consistency.py  consistency_report  consistency_report.py  del_annotation.py  divide.py  genome_tree.py  giab_report.py  giab_summary.py  make_ga4gh.py  matching.py  msa2vcf.py  msatovcf.py  old_bench.py  phab.py  pipeline.py  rebench.py  refine.py  region_vcf_iter.py  segmentation.py  stats.py  stratifications.sh  stratify.py  stratp_test.py  truv2df.py  truvari  truvari.py  utils.py  variant_file.py  variant_params.py  variant_record.py  (+4 more)
(+2395 files in other folders)
