[build-system]
requires = ["setuptools >= 69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "truvari"
authors = [
    {name = "ACEnglish", email="acenglish@gmail.com"}
]
description = "Structural variant comparison tool for VCFs"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "bwapy>=0.1.4",
    "edlib>=1.3.9",
    "intervaltree>=3.1",
    "joblib>=1.2.0",
    "numpy>=1.24.4",
    "rich>=12.5.1",
    "pandas>=1.5.3",
    "pyabpoa>=1.4.3",
    "pysam>=0.22",
    "pytabix>=0.1",
    "pywfa>=0.5.1",
]

[project.scripts]
truvari = "truvari.__main__:main"

[project.urls]
Homepage = "https://github.com/ACEnglish/truvari"
Documentation = "https://truvari.readthedocs.io/en/latest/"
Issues = "https://github.com/ACEnglish/truvari/issues"
Changelog = "https://github.com/ACEnglish/truvari/wiki/Updates"

[tool.setuptools]
packages = ["truvari", "truvari.annotations"]
